@@ -5,6 +5,7 @@ Stable versions
 	Fix bugs caught in the OpenMPT test cases:
 	- fix IT note off with instrument
 	- fix IT note recover after cut
+	- fix IT instrument without note after note cut event
 	Other changes:
 	- fix IT pattern break in hexadecimal (reported by StarFox008)
 
